# claude-code-kazuba

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  install.sh  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/checkpoints/: session_state_20260301_033448.toon  session_state_20260301_033815.toon  session_state_20260301_033841.toon  session_state_20260301_033904.toon  session_state_20260301_033912.toon  session_state_20260301_034355.toon  session_state_20260301_035227.toon  session_state_20260301_041136.toon  session_state_20260301_174145.toon  session_state_20260301_174224.toon  session_state_20260312_023554.toon  session_state_20260312_023915.toon  session_state_20260312_024103.toon  session_state_20260312_024136.toon  session_state_20260312_103601.toon  session_state_20260312_103649.toon  session_state_20260312_103828.toon  session_state_20260312_104139.toon  session_state_20260312_134000.toon  session_state_20260312_134417.toon
.claude/hooks/: __init__.py  self_host_config.py
.github/workflows/: ci.yml  publish.yml
checkpoints/: phase_00.toon  phase_01.toon  phase_02.toon  phase_03.toon  phase_04.toon  phase_05.toon  phase_06.toon  phase_07.toon  phase_08.toon  phase_09.toon  phase_10.toon  phase_11.toon  phase_12.toon  phase_13.toon  phase_14.toon  phase_15.toon  phase_16.toon  phase_17.toon  phase_18.toon  phase_19.toon  phase_20.toon  phase_21.toon  phase_22.toon  pln2_generation.toon
claude_code_kazuba/: __init__.py  __main__.py  cli.py  config.py  governance.py  hook_logger.py  json_output.py  patterns.py  performance.py  reward_calculator.py  rlm.py  rust_bridge.py  template_engine.py  trace_manager.py
claude_code_kazuba/commands/: esaa.py
claude_code_kazuba/data/: __init__.py  paths.py
claude_code_kazuba/data/modules/aco-rust-core/rust-core/: Cargo.toml
claude_code_kazuba/data/modules/aco-rust-core/rust-core/src/aco/: esaa.rs  graph.rs  mod.rs  models.rs  tracker.rs
claude_code_kazuba/installer/: __init__.py  install_module.py  merge_settings.py  resolve_deps.py  validate_installation.py
claude_code_kazuba/models/: __init__.py  esaa_types.py
core/: CLAUDE.md.template  MODULE.md
core/rules/: code-style.md  core-governance.md  security.md
docs/: ARCHITECTURE.md  CREATING_MODULES.md  ESAA.md  GLOSSARY.md  HOOKS_REFERENCE.md  MIGRATION.md  MODULES_CATALOG.md
docs/demo/: RECORDING.md  generate_cast.py  kazuba-demo.cast
examples/: README.md
examples/python-api/: README.md
examples/rust-cli/: README.md
examples/typescript-web/: README.md
lib/: __init__.py  checkpoint.py  circuit_breaker.py  config.py  event_bus.py  governance.py  hook_base.py  performance.py  rlm.py  rust_bridge.py  trace_manager.py
modules/: config_hypervisor
modules/agents-dev/: MODULE.md
modules/commands-dev/: MODULE.md
modules/commands-prp/: MODULE.md
modules/config-hypervisor/: MODULE.md
modules/hooks-essential/: MODULE.md
modules/hooks-quality/: MODULE.md
modules/hooks-routing/: settings.hooks.json
modules/rlm/: MODULE.md
modules/skills-meta/: MODULE.md
modules/skills-planning/: MODULE.md
modules/skills-research/: MODULE.md
modules/team-orchestrator/: MODULE.md
plans/: 00-index.md  01-phase-bootstrap-&-scaffolding.md  02-phase-shared-library-lib-.md  03-phase-core-module.md  04-phase-hooks-essential-module.md  05-phase-hooks-quality-security.md  06-phase-hooks-routing-knowledge-metrics.md  07-phase-skills-agents-commands.md  08-phase-config-contexts-team-orchestrator.md  09-phase-installer-cli.md  10-phase-presets-integration-tests.md  11-phase-github-ci-documentation.md
plans/checkpoints/: phase_11.toon
plans/v2/: 00-index.md  01-phase-shared-infrastructure.md  02-phase-rust-acceleration-layer.md  03-phase-core-governance-cila-formal.md  04-phase-agent-triggers-recovery-triggers.md  05-phase-hypervisor-executable.md  06-phase-advanced-hooks-batch-1.md  07-phase-advanced-hooks-batch-2.md  08-phase-rlm-learning-memory.md  09-phase-integration-presets-migration.md  10-phase-benchmarks-self-hosting.md  11-phase-documentation-ci-update.md  12-phase-release-v0.2.0.md  amplification-report.md
plans/validation/: validate_all.py  validate_phase_00.py  validate_phase_01.py  validate_phase_02.py  validate_phase_03.py  validate_phase_04.py  validate_phase_05.py  validate_phase_06.py  validate_phase_07.py  validate_phase_08.py  validate_phase_09.py  validate_phase_10.py
presets/: professional.txt  research.txt  standard.txt
rust/esaa-ffi/: Cargo.toml
rust/esaa-ffi/src/: lib.rs  projector.rs  types.rs
rust/kazuba-hooks/: Cargo.toml  pyproject.toml
rust/kazuba-hooks/.cipher/notifications/: notifications_20260122.jsonl
rust/kazuba-hooks/benches/: hooks_benchmark.rs
rust/kazuba-hooks/src/: bash_safety.rs  code_quality.rs  knowledge.rs  learning.rs  lib.rs  patterns.rs  qa.rs  recovery.rs  rlm_reasoning.rs  secrets.rs  skill_match.rs  subagent.rs
scripts/: __init__.py  benchmark_esaa.py  benchmark_hooks.py  demo_real_pipeline.py  detect_stack.py  generate_plan.py  generate_plan_v2.py  install_module.py  merge_settings.py  migrate_v01_v02.py  resolve_deps.py  test_esaa_projector.py  validate_installation.py
scripts/pypi/: migrate_phase1_rename.py  migrate_phase2_installer.py  migrate_phase3_data.py  validate_phase1.py
tests/: conftest.py  test_cila_router_parametric.py  test_cli.py  test_dspy_modules.py  test_esaa_copy.py  test_esaa_event_store.py  test_esaa_generator_node_saga.py  test_esaa_upcaster.py  test_p1d_modules.py  test_p1e_rules.py  test_task_type_rename.py  test_ums.py
tests/integration/: __init__.py  conftest.py  test_preset_enterprise.py  test_preset_minimal.py  test_preset_professional.py  test_preset_research.py  test_preset_standard.py
tests/integration_v2/: __init__.py  test_e2e_circuit_breaker.py  test_e2e_governance.py  test_e2e_hypervisor.py  test_e2e_migration.py  test_e2e_rlm.py  test_regression_723.py
tests/phase_00/: test_structure.py
tests/phase_01/: test_checkpoint.py  test_config.py  test_hook_base.py  test_json_output.py  test_patterns.py  test_performance.py  (+1 more)
(+301 files in other folders)
