[project]
name = "claude-code-kazuba"
version = "0.2.0"
description = "Excellence configuration framework for Claude Code — modules, hooks, skills, agents, and reusable presets"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{name = "Gabriel Gadea"}]
keywords = ["claude-code", "ai", "configuration", "framework", "hooks", "skills", "agents", "presets"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.10",
    "msgpack>=1.1",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "pyright>=1.1.390",
    "build>=1.2",
    "twine>=6.0",
]
rust = [
    "maturin>=1.0",
]

[project.scripts]
kazuba = "claude_code_kazuba.cli:main"

[project.urls]
Homepage = "https://github.com/gabrielgadea/claude-code-kazuba"
Repository = "https://github.com/gabrielgadea/claude-code-kazuba"
Issues = "https://github.com/gabrielgadea/claude-code-kazuba/issues"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["claude_code_kazuba*"]

[tool.setuptools.package-data]
claude_code_kazuba = [
    "py.typed",
    "data/modules/**/*",
    "data/core/**/*",
    "data/presets/**/*",
]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["TCH"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
exclude = [
    "claude_code_kazuba/data/modules",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["claude_code_kazuba"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
