[package]
name = "esaa-ffi"
version = "0.4.0"
edition = "2021"
authors = ["Gabriel Gadea <gabriel@gadea.dev>"]
description = "ESAA FFI bindings for Python - Event Sourcing for Autonomous Agents"
license = "MIT"

[lib]
name = "esaa_ffi"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py311"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.9"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "projector_bench"
harness = false
